# Focusing_app

./: .gitignore  README.md  __init__.py  __main__.py  focusing.spec  main_widget.py  pyproject.toml  requirements.txt  save.pkl  saving.pkl  setup.iss  test.py  time_day.py  timw_title_widget.py
.github/workflows/: release.yml
achievments_widget/: __init__.py  voice.py  widget.py
daysnotebook/: __init__.py
list_arranger/: __init__.py  __main__.py
src/: __init__.py  main_widget.py  saving.pkl  utils.py
src/achievement_widget/: __init__.py  voice.py  widget.py
src/daysnotebook/: __init__.py
src/list_arranger/: __init__.py
